[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/NodeMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/PixelFont225.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Themes/LightTheme.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 2 )

[node name="NodeMenu" type="Control"]
margin_right = 256.0
margin_bottom = 392.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="GateVBox" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 14.0
margin_bottom = -14.0
custom_constants/separation = 25

[node name="GatesLbl" type="Label" parent="Panel/GateVBox"]
margin_right = 256.0
margin_bottom = 18.0
text = "GATES"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/GateVBox"]
margin_top = 43.0
margin_right = 256.0
margin_bottom = 68.0
custom_constants/separation = 40
alignment = 1

[node name="ANDBtn" type="Button" parent="Panel/GateVBox/HBoxContainer"]
margin_left = 18.0
margin_right = 108.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
focus_mode = 0
text = "AND"

[node name="NOTBtn" type="Button" parent="Panel/GateVBox/HBoxContainer"]
margin_left = 148.0
margin_right = 238.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
focus_mode = 0
text = "NOT"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/GateVBox"]
margin_top = 93.0
margin_right = 256.0
margin_bottom = 118.0
custom_constants/separation = 40
alignment = 1

[node name="GenericBtn" type="Button" parent="Panel/GateVBox/HBoxContainer2"]
margin_left = 83.0
margin_right = 173.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Custom"

[node name="IOLbl" type="Label" parent="Panel/GateVBox"]
margin_top = 143.0
margin_right = 256.0
margin_bottom = 161.0
text = "IO"
align = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/GateVBox"]
margin_top = 186.0
margin_right = 256.0
margin_bottom = 211.0
custom_constants/separation = 30
alignment = 1

[node name="InputBtn" type="Button" parent="Panel/GateVBox/HBoxContainer6"]
margin_left = 23.0
margin_right = 113.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
disabled = true
text = "INPUT"

[node name="ValidationBtn" type="Button" parent="Panel/GateVBox/HBoxContainer6"]
margin_left = 143.0
margin_right = 233.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Prove"

[node name="ControlsLbl" type="Label" parent="Panel/GateVBox"]
margin_top = 236.0
margin_right = 256.0
margin_bottom = 254.0
text = "CONTROLS"
align = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/GateVBox"]
margin_top = 279.0
margin_right = 256.0
margin_bottom = 304.0
custom_constants/separation = 40
alignment = 1

[node name="ExitBtn" type="Button" parent="Panel/GateVBox/HBoxContainer7"]
margin_left = 18.0
margin_right = 108.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "EXIT"

[node name="CloseBtn" type="Button" parent="Panel/GateVBox/HBoxContainer7"]
margin_left = 148.0
margin_right = 238.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Hide"

[node name="HBoxContainer8" type="HBoxContainer" parent="Panel/GateVBox"]
margin_top = 329.0
margin_right = 256.0
margin_bottom = 354.0
custom_constants/separation = 40
alignment = 1

[node name="SaveCompBtn" type="Button" parent="Panel/GateVBox/HBoxContainer8"]
margin_left = 83.0
margin_right = 173.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Save"

[node name="InputTablePanel" type="Panel" parent="."]
visible = false
margin_left = -288.0
margin_right = -32.0
margin_bottom = 384.0

[node name="InputTextEdit" type="TextEdit" parent="InputTablePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -64.0
text = "11:1,
10:0,
01:0,
00:0,"
syntax_highlighting = true
show_line_numbers = true
bookmark_gutter = true
fold_gutter = true
smooth_scrolling = true
hiding_enabled = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="InputTablePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 32.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="InputTablePanel/HBoxContainer"]
margin_left = 63.0
margin_top = 10.0
margin_right = 193.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Input Table"

[node name="HBoxContainer2" type="HBoxContainer" parent="InputTablePanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = -23.0
custom_constants/separation = 20
alignment = 1

[node name="InCheckBtn" type="Button" parent="InputTablePanel/HBoxContainer2"]
margin_left = 28.0
margin_right = 118.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Check"

[node name="InCloseBtn" type="Button" parent="InputTablePanel/HBoxContainer2"]
margin_left = 138.0
margin_right = 228.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Close"

[node name="ValidationTablePanel" type="Panel" parent="."]
visible = false
margin_left = 288.0
margin_right = 544.0
margin_bottom = 384.0

[node name="ValidationTextEdit" type="TextEdit" parent="ValidationTablePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 32.0
margin_right = -16.0
margin_bottom = -112.0
text = "11:1,
10:0,
01:0,
00:0,"
readonly = true
syntax_highlighting = true
show_line_numbers = true
bookmark_gutter = true
fold_gutter = true
smooth_scrolling = true
hiding_enabled = true
wrap_enabled = true
caret_block_mode = true
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="ValidationTablePanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_right = 128.0
margin_bottom = 32.0
custom_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="ValidationTablePanel/HBoxContainer"]
margin_left = 33.0
margin_top = 10.0
margin_right = 223.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.133333, 0.137255, 0.137255, 1 )
custom_fonts/font = SubResource( 1 )
text = "Validation Table"

[node name="Panel" type="Panel" parent="ValidationTablePanel"]
margin_left = 16.0
margin_top = 288.0
margin_right = 240.0
margin_bottom = 320.0

[node name="StateLbl" type="Label" parent="ValidationTablePanel/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_right = -16.0
text = "-"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ValidationTablePanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -48.0
margin_right = 128.0
margin_bottom = -23.0
custom_constants/separation = 20
alignment = 1

[node name="VCheckBtn" type="Button" parent="ValidationTablePanel/HBoxContainer2"]
margin_left = 28.0
margin_right = 118.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Check"

[node name="VCloseBtn" type="Button" parent="ValidationTablePanel/HBoxContainer2"]
margin_left = 138.0
margin_right = 228.0
margin_bottom = 25.0
rect_min_size = Vector2( 90, 25 )
text = "Close"

[node name="CompsPanel" type="Panel" parent="."]
visible = false
margin_left = -272.0
margin_right = -32.0
margin_bottom = 392.0

[node name="CompsCont" type="GridContainer" parent="CompsPanel"]
margin_left = 16.0
margin_top = 16.0
margin_right = 226.0
margin_bottom = 376.0
rect_min_size = Vector2( 210, 0 )
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 2

[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="button_down" from="Panel/GateVBox/HBoxContainer/ANDBtn" to="." method="_on_ANDBtn_button_down"]
[connection signal="button_up" from="Panel/GateVBox/HBoxContainer/ANDBtn" to="." method="_on_ANDBtn_button_up"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer/ANDBtn" to="." method="_on_ANDBtn_pressed"]
[connection signal="button_down" from="Panel/GateVBox/HBoxContainer/NOTBtn" to="." method="_on_NOTBtn_button_down"]
[connection signal="button_up" from="Panel/GateVBox/HBoxContainer/NOTBtn" to="." method="_on_NOTBtn_button_up"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer/NOTBtn" to="." method="_on_NOTBtn_pressed"]
[connection signal="button_down" from="Panel/GateVBox/HBoxContainer2/GenericBtn" to="." method="_on_GenericBtn_button_down"]
[connection signal="button_up" from="Panel/GateVBox/HBoxContainer2/GenericBtn" to="." method="_on_GenericBtn_button_up"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer6/InputBtn" to="." method="_on_InputBtn_pressed"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer6/ValidationBtn" to="." method="_on_ValidationBtn_pressed"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer7/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer7/CloseBtn" to="." method="_on_CloseBtn_pressed"]
[connection signal="pressed" from="Panel/GateVBox/HBoxContainer8/SaveCompBtn" to="." method="_on_SaveCompBtn_pressed"]
[connection signal="pressed" from="InputTablePanel/HBoxContainer2/InCloseBtn" to="." method="_on_InCloseBtn_pressed"]
[connection signal="pressed" from="ValidationTablePanel/HBoxContainer2/VCheckBtn" to="." method="_on_VCheckBtn_pressed"]
[connection signal="pressed" from="ValidationTablePanel/HBoxContainer2/VCloseBtn" to="." method="_on_VCloseBtn_pressed"]
